[package]
name = "rust_memcached"
version = "0.1.0"
authors = ["danila.fomin <danila.fomin@corp.mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
actix = "0.11.1"
actix-web = "3"
serde = "1.0.125"
log = "0.4.14"
env_logger = "0.8.3"
config = "0.11.0"
duration-string = { version = "0.0.6", features = ["serde"] }
